--- a/portfolio/public/index.html
+++ b/portfolio/public/index.html
@@ -10,14 +10,16 @@
     <meta name="theme-color" content="#000000" />
     <!-- <meta name="viewport" content="width=100%"> -->
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
-    
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css?family=Lato"
+      rel="stylesheet"
+    />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -27,7 +29,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <div id="loadOverlay" style="background-color:#333; position:absolute; top:0px; left:0px; width:100%; height:100%; z-index:2000;"></div>
+    <div
+      id="loadOverlay"
+      style="background-color:#333; position:absolute; top:0px; left:0px; width:100%; height:100%; z-index:2000;"
+    ></div>
     <title>Vance Leon</title>
   </head>
   <body>
